--- a/portfolio.html
+++ b/portfolio.html
@@ -30,12 +30,12 @@
                 <a href="/index.html" class="logo-part1">Web</a>
                 <a href="index.html" class="logo-part2">Studio</a>
                 <ul>
-                    <span class="title-navigation1">
+                    <div class="title-navigation1">
                         <li><a href="./index.html" class="nav-studio">Студия</a></li>
-                    </span>
-                    <span class="title-navigation2">
+                    </div>
+                    <div class="title-navigation2">
                         <li><a href="#" class="nav-portfolio">Портфолио</a></li>
-                    </span>
+                    </div>
                     <li><a href="#" class="nav-contacts">Контакты</a></li>
                 </ul>
             </nav>
@@ -74,7 +74,8 @@
                 <div class="img11">
                     <p><strong>Ресторан Seafood</strong></p>
                 </div>
-                <div class="img111"><span>Приложение</span>
+                <div class="img111"><span>Приложение</span></div>
+                
             </li>
 
             <li class="img4">
@@ -82,7 +83,7 @@
                 <div class="img11">
                     <p>Проект Prime</p>
                 </div>
-                <div class="img111"><span>Маркетинг</span>
+                <div class="img111"><span>Маркетинг</span></div>
             </li>
 
             <li class="img5">
@@ -90,7 +91,7 @@
                 <div class="img11">
                     <p><strong>Проект Boxes</strong></p>
                 </div>
-                <div class="img111"><span>Приложение</span>
+                <div class="img111"><span>Приложение</span></div>
             </li>
 
             <li class="img6">
@@ -98,7 +99,7 @@
                 <div class="img11">
                     <p><strong>Inspiration has no Borders</strong></p>
                 </div>
-                <div class="img111"><span>Веб-сайт</span>
+                <div class="img111"><span>Веб-сайт</span></div>
             </li>
 
             <li class="img7">
@@ -106,7 +107,7 @@
                 <div class="img11">
                     <p><strong>Издание Limited Edition</strong></p>
                 </div>
-                <div class="img111"><span>Дизайн</span>
+                <div class="img111"><span>Дизайн</span></div>
             </li>
 
             <li class="img8">
@@ -114,7 +115,7 @@
                 <div class="img11">
                     <p><strong>Проект LAB</strong></p>
                 </div>
-                <div class="img111"><span>Маркетинг</span>
+                <div class="img111"><span>Маркетинг</span></div>
             </li>
 
             <li class="img9">
@@ -122,7 +123,7 @@
                 <div class="img11">
                     <p><strong>Growing Business</strong></p>
                 </div>
-                <div class="img111"><span>Приложение</span>
+                <div class="img111"><span>Приложение</span></div>
             </li>
         </ul>
 
@@ -131,7 +132,7 @@
     <!-- ПОДВАЛ -->
 
     <footer>
-        <div class="footer-port">
+        <div class="footer-port"></div>
             <a href="./index.html" class="footer-logo-part1">Web</a>
             <a href="./index.html" class="footer-logo-part2">Studio</a>
             <address>
@@ -147,10 +148,5 @@
                     </p>
                 </div>
             </address>
-
-
-
-    </footer>
-
-
+     </footer>
 </body>
