--- a/portfolio.html
+++ b/portfolio.html
@@ -30,12 +30,12 @@
                 <a href="/index.html" class="logo-part1">Web</a>
                 <a href="index.html" class="logo-part2">Studio</a>
                 <ul>
-                    <div class="title-navigation1">
+                    <span class="title-navigation1">
                         <li><a href="./index.html" class="nav-studio">Студия</a></li>
-                    </div>
-                    <div class="title-navigation2">
+                    </span>
+                    <span class="title-navigation2">
                         <li><a href="#" class="nav-portfolio">Портфолио</a></li>
-                    </div>
+                    </span>
                     <li><a href="#" class="nav-contacts">Контакты</a></li>
                 </ul>
             </nav>
