--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
     </main>
     <footer>
-        <div class="footer">
+        <div class="footer"></div>
             <a href="./index.html" class="footer-logo-part1">Web</a>
             <a href="./index.html" class="footer-logo-part2">Studio</a>
             <address>
@@ -139,12 +139,9 @@
                     </p>
                 </div>
             </address>
+        </footer>
 
-
-
-    </footer>
-
-    <!-- футер -->
+    
 </body>
 
 </html>
