--- a/index.html
+++ b/index.html
@@ -23,12 +23,11 @@
 
                 <ul>
 
-                    <li><a href="#" class="nav-studio">Студия</a></li>
+                    <li><a href="#" class="nav-list" style="width: 49px; left: 453px;">Студия</a></li>
 
+                    <li><a href="./portfolio.html" class="nav-list" style="width: 77px; left: 552px; ">Портфолио</a></li>
 
-                    <li><a href="./portfolio.html" class="nav-portfolio">Портфолио</a></li>
-
-                    <li><a href="#" class="nav-contacts">Контакты</a></li>
+                    <li><a href="#" class="nav-list" style="width: 68px; left: 679px;">Контакты</a></li>
                 </ul>
             </nav>
         </div>
@@ -39,24 +38,29 @@
     <main>
         <div class="main-background">
             <h1 class="main-text">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="main-button"><span class="button-text">Заказать услугу</span></button>
+            <button type="button" class="index-button" style="color: aliceblue;">Заказать услугу</button>
         </div>
         <section>
-            <h3 class="description-title">Внимание к деталям</h3>
+            <ul>
+                <li>
+                <h3 class="description-title">Внимание к деталям</h3>
             <p class="description-text">Идейные соображения, а также начало повседневной работы по формированию
                 позиции.</p>
-
+                </li>
+                <li>
             <h3 class="description-title" style="left: 515px;">Пунктуальность</h3>
             <p class="description-text" style="left: 515px;">Задача организации, в особенности же рамки и место обучения кадров влечет за
                 собой.</p>
-
+                </li>
             <h3 class="description-title" style="left: 815px;">Планирование</h3>
             <p class="description-text" style="left: 815px;">Равным образом консультация с широким активом в значительной степени
                 обуславливает.</p>
-
+                <li>
             <h3 class="description-title" style="left: 1115px;">Современные технологии</h3>
             <p class="description-text" style="left: 1115px;">Значимость этих проблем настолько очевидна, что реализация плановых заданий.
             </p>
+                </li>
+            </ul>
         </section>
 
         <section>
