--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HomeWork1</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-
+   <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -38,7 +37,7 @@
         <hr>
     </header>
     <main>
-        <div class="main-text">
+        <div class="main-title">
             <h1 class="main-text">Эффективные решения для вашего бизнеса</h1>
             <button type="button" class="index-button">Заказать услугу</button>
         </div>
