--- a/portfolio.html
+++ b/portfolio.html
@@ -12,11 +12,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-
 </head>
 
 <body>
-    <!-- шапка сайта -->
+    <!-- ШАПКА -->
     <header>
 
         <nav>
@@ -24,10 +23,10 @@
 
             <ul class="navigation">
 
-                <li><a href="#" class="nav-list">Студия</a></li>
+                <li><a href="index.html" class="nav-list">Студия</a></li>
 
 
-                <li><a href="portfolio.html" class="nav-list">Портфолио</a></li>
+                <li><a href="#" class="nav-list">Портфолио</a></li>
 
                 <li><a href="#" class="nav-list">Контакты</a></li>
             </ul>
@@ -37,94 +36,93 @@
         <a href="tel:+380961111111" class="nav-adress">+380 96 111 1111</a>
         <hr>
     </header>
+    <!-- МЭИН -->
     <main>
-        <div class="main-text">
-            <h1 class="main-text">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="index-button">Заказать услугу</button>
-        </div>
-        <section>
-            <ul class="main-list">
-                <li>
-                    <h3 class="description-title">Внимание к деталям</h3>
-                    <p class="description-text">Идейные соображения, а также начало повседневной работы по формированию
-                        позиции.</p>
-                </li>
+        <ul class="main-list">
+            <li><button type="button" class="main-button">Все</button></li>
+            <li><button type="button" class="main-button">Веб-сайты</button></li>
+            <li><button type="button" class="main-button">Приложения</button></li>
+            <li><button type="button" class="main-button">Дизайн</button></li>
+            <li><button type="button" class="main-button">Маркетинг</button></li>
+        </ul>
+        <ul class="promo-list">
+            <li class="promo-item">
+                <img src="./images/port-img1.jpg" alt="веб-сайт" width="370" height="294">
+                <div class="promo-description">
+                    <p><strong>Технокряк</strong></p>
+                </div>
+                <div class="promo-text"><span>Веб-сайт</span></div>
+            </li>
+            <li class="promo-item">
+                <img src="./images/port-img9.jpg" alt="дизайн" width="370" height="294">
+                <div class="promo-description">
+                    <p><strong>Постер New Orlean vs Golden Star</strong></p>
+                </div>
+                <div class="promo-text"><span>Дизайн</span></div>
+            </li>
 
-                <li>
-                    <h3 class="description-title">Пунктуальность</h3>
-                    <p class="description-text">Задача организации, в особенности же рамки и место обучения кадров
-                        влечет за
-                        собой.</p>
-                </li>
-                <li>
+            <li class="promo-item">
+                <img src="./images/port-img8.jpg" alt="приложение" width="370" height="294">
+                <div class="promo-description">
+                    <p><strong>Ресторан Seafood</strong></p>
+                </div>
+                <div class="promo-text"><span>Приложение</span></div>
 
-                    <h3 class="description-title">Планирование</h3>
-                    <p class="description-text">Равным образом консультация с широким активом в значительной степени
-                        обуславливает.</p>
-                </li>
+            </li>
 
-                <li>
-                    <h3 class="description-title">Современные технологии</h3>
-                    <p class="description-text">Значимость этих проблем настолько очевидна, что реализация плановых
-                        заданий.
-                    </p>
-                </li>
-            </ul>
-        </section>
+            <li class="promo-item">
+                <img src="./images/port-img7.jpg" alt="маркетинг" width="370" height="294">
+                <div class="promo-description">
+                    <p>Проект Prime</p>
+                </div>
+                <div class="promo-text"><span>Маркетинг</span></div>
+            </li>
 
-        <section>
-            <h2 class="title-center">Чем мы занимаемся</h2>
-            <ul class="main-list">
+            <li class="promo-item">
+                <img src="./images/port-img6.jpg" alt="приложение" width="370" height="294">
+                <div class="promo-description">
+                    <p><strong>Проект Boxes</strong></p>
+                </div>
+                <div class="promo-text"><span>Приложение</span></div>
+            </li>
 
-                <li class="title-img-index"><img src="./images/imagine%201.jpg" alt="photo 1" width="370" height="294">
-                </li>
+            <li class="promo-item">
+                <img src="./images/port-img5.jpg" alt="веб-сайт" width="370" height="294">
+                <div class="promo-description">
+                    <p><strong>Inspiration has no Borders</strong></p>
+                </div>
+                <div class="promo-text"><span>Веб-сайт</span></div>
+            </li>
 
-                <li class="title-img-index" style="left: 615px;"><img src="./images/imagine%202.jpg" alt="photo 2"
-                        width="370" height="294">
-                </li>
+            <li class="promo-item">
+                <img src="./images/port-img4.jpg" alt="дизайн" width="370" height="294">
+                <div class="promo-description">
+                    <p><strong>Издание Limited Edition</strong></p>
+                </div>
+                <div class="promo-text"><span>Дизайн</span></div>
+            </li>
 
-                <li class="title-img-index" style="left: 1051px;"><img src="./images/imagine%203.jpg" alt="photo 3"
-                        width="370" height="294">
-                </li>
-            </ul>
-        </section>
+            <li class="promo-item">
+                <img src="./images/port-img3.jpg" alt="маркетинг" width="370" height="294">
+                <div class="promo-description">
+                    <p><strong>Проект LAB</strong></p>
+                </div>
+                <div class="promo-text"><span>Маркетинг</span></div>
+            </li>
 
-        <section>
-            <div class="ourteam-background">
-                <h2 class="ourteam-title">Наша команда</h2>
-
-                <ul class="text-center">
-
-                    <li class="ourteam-worker"><img src="./images/our%20guys%201.jpg" alt="product designer" width="270"
-                            height="260">
-
-                        <p><strong>Игорь Демьяненко</strong></p>
-                        <span lang="en" class="description-text">Profuct Designer</span>
-
-                    </li>
-
-                    <li class="ourteam-worker"><img src="./images/our%20guys%202.jpg" alt="Frontend Developer"
-                            width="270" height="260">
-                        <p><strong>Ольга Репина</strong></p>
-                        <span lang="en" class="description-text">Frontend Developer</span>
-                    </li>
-
-                    <li class="ourteam-worker"><img src="./images/our%20guys%203.jpg" alt="Marketing" width="270"
-                            height="260">
-                        <p><strong>Николай Тарасов</strong></p>
-                        <span lang="en" class="description-text">Marketing</span>
-                    </li>
-
-                    <li class="ourteam-worker"><img src="./images/our%20guys%204.jpg" alt="Marketing" width="270"
-                            height="260">
-                        <p><strong>Михаил Ермаков</strong></p>
-                        <span lang="en" class="description-text">UI Designer</span>
-                    </li>
-                </ul>
-            </div>
-        </section>
+            <li class="promo-item">
+                <img src="./images/port-img2.jpg" alt="приложение" width="370" height="294">
+                <div class="promo-description">
+                    <p><strong>Growing Business</strong></p>
+                </div>
+                <div class="promo-text"><span>Приложение</span></div>
+            </li>
+        </ul>
 
     </main>
+
+    <!-- ПОДВАЛ -->
+
     <footer class="footer">
         <div class="footer"></div>
         <a href="./index.html" class="logo-part1"><span class="logo-part2">Web</span>Studio</a>
@@ -141,8 +139,4 @@
             </div>
         </address>
     </footer>
-
-
 </body>
-
-</html>
